--- a/android/app/src/main/res/values/styles.xml
+++ b/android/app/src/main/res/values/styles.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<resources>
+<resources xmlns:tools="http://schemas.android.com/tools">
 
     <!-- Base application theme. -->
     <style name="AppTheme" parent="Theme.AppCompat.Light.DarkActionBar">
@@ -16,7 +16,11 @@
     </style>
 
 
-    <style name="AppTheme.NoActionBarLaunch" parent="Theme.SplashScreen">
-        <item name="android:background">@drawable/splash</item>
+<!--    <style name="AppTheme.NoActionBarLaunch" parent="Theme.SplashScreen">-->
+<!--        <item name="android:background">@drawable/splash</item>-->
+<!--    </style>-->
+
+    <style name="AppTheme.NoActionBarLaunch" parent="AppTheme.NoActionBar" tools:ignore="DuplicateDefinition">
+        <item name="android:background">@drawable/screen</item>
     </style>
 </resources>
