--- a/src/assets/CSS/style.css
+++ b/src/assets/CSS/style.css
@@ -2,3 +2,64 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+.emoji-404 {
+  position: relative;
+  animation: mymove 2.5s infinite;
+}
+
+@keyframes mymove {
+  33% {
+    top: 0px;
+  }
+  66% {
+    top: 20px;
+  }
+  100% {
+    top: 0px;
+  }
+}
+
+.custom-button {
+  background-color: rgba(5, 70, 90, 0.8);
+  text-align: center;
+  display: block;
+  font-size: 0.875rem;
+  padding: 0.5rem 1rem;
+  line-height: 1;
+  border: 1px solid white;
+  border-radius: 0.375rem;
+  color: white;
+  transition: border-color 0.2s, color 0.2s, background-color 0.2s;
+
+  /* Hover styles */
+  &:hover {
+    border-color: transparent;
+    color: #5eead4;
+    background-color: white;
+  }
+}
+
+/* .custom-button {
+  background-color: rgba(5, 70, 90, 0.8);
+  text-align: center;
+  display: block;
+  font-size: 0.875rem;
+  padding: 0.5rem 1rem;
+  line-height: 1;
+  border: 1px solid white;
+  border-radius: 0.375rem;
+  color: white;
+  transition: border-color 0.2s, color 0.2s, background-color 0.2s;
+}
+
+.custom-button:hover {
+  border-color: transparent;
+  color: #5eead4;
+  background-color: white;
+} */
+
+/* .my-1 {
+  margin-top: 0.25rem;
+  margin-bottom: 0.25rem;
+} */
